--- a/GamingGamerGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/GamingGamerGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -127,29 +127,29 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport2",ConfigSettin
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettings=(ViewportType=LVT_OrthoXY,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,LocalExposure=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,VisualizeLocalExposure=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,VisualizeNanite=0,VisualizeLumen=0,VisualizeVirtualShadowMap=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=0,CompositeEditorPrimitives=1,OpaqueCompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=0,VisualizeMotionBlur=0,VisualizeMotionVectors=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,LumenReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,NaniteMeshes=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,VisualizeInstanceUpdates=0,InstancedGrass=1,DynamicShadows=1,Particles=1,Niagara=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=1,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,VisualizeLevelInstanceEditing=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,PhysicsField=0,VisualizeGlobalDistanceField=0,VisualizeLightingOnProbes=0,ScreenSpaceAO=1,DistanceFieldAO=1,LumenGlobalIllumination=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,VirtualTexturePendingMips=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,DisableOcclusionQueries=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VisualizePostProcessStack=0,VirtualTexturePrimitives=0,VisualizeVolumetricCloudConservativeDensity=0,VisualizeStrataMaterial=0,VirtualShadowMapCaching=1,DrawOnlyVSMInvalidatingGeo=0,SingleLayerWaterRefractionFullPrecision=0,VirtualTextureResidency=1,DVRStreamingSystem=1,LumenScreenTraces=1,LumenDetailTraces=1,LumenGlobalTraces=1,LumenFarFieldTraces=1,LumenSecondaryBounces=1,LumenScreenSpaceDirectionalOcclusion=1,LumenReuseShadowMaps=1",GameShowFlagsString="PostProcessing=0,Bloom=1,LocalExposure=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,VisualizeLocalExposure=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,VisualizeNanite=0,VisualizeLumen=0,VisualizeVirtualShadowMap=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=0,OpaqueCompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,VisualizeMotionVectors=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,LumenReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,NaniteMeshes=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,VisualizeInstanceUpdates=0,InstancedGrass=1,DynamicShadows=1,Particles=1,Niagara=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=0,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=0,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=0,VisualizeLevelInstanceEditing=1,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=0,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=1,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,PhysicsField=0,VisualizeGlobalDistanceField=0,VisualizeLightingOnProbes=0,ScreenSpaceAO=1,DistanceFieldAO=1,LumenGlobalIllumination=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,VirtualTexturePendingMips=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,DisableOcclusionQueries=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VisualizePostProcessStack=0,VirtualTexturePrimitives=0,VisualizeVolumetricCloudConservativeDensity=0,VisualizeStrataMaterial=0,VirtualShadowMapCaching=1,DrawOnlyVSMInvalidatingGeo=0,SingleLayerWaterRefractionFullPrecision=0,VirtualTextureResidency=1,DVRStreamingSystem=1,LumenScreenTraces=1,LumenDetailTraces=1,LumenGlobalTraces=1,LumenFarFieldTraces=1,LumenSecondaryBounces=1,LumenScreenSpaceDirectionalOcclusion=1,LumenReuseShadowMaps=1",BufferVisualizationMode="",NaniteVisualizationMode="",LumenVisualizationMode="",VirtualShadowMapVisualizationMode="",RayTracingDebugVisualizationMode="",ExposureSettings=(FixedEV100=1.000000,bFixed=False),FOVAngle=90.000000,FarViewPlane=0.000000,bIsRealtime=False,bShowOnScreenStats=True,EnabledStats=,bShowFullToolbar=True))
 
 [MRU]
-MRUItem0=/Game/Levels/MasterLevel
-MRUItem1=/Game/Levels/BasicRoom
-MRUItem2=/Game/Levels/EndRoom
-MRUItem3=/Game/Levels/MainMenu
-MRUItem4=/Game/Levels/LoseLevel
-MRUItem5=/Game/Levels/StartLevel
-MRUItem6=/Game/Levels/TestingPauseMenuLevel
-MRUItem7=/Game/Levels/TutorialRoom
-MRUItem8=/Game/Levels/OtherRoom
-MRUItem9=/Game/Levels/InGameScreen
-MRUItem10=/Game/InGame/InGame
-MRUItem11=/Game/InGameScreen
+MRUItem0=/Game/Levels/EndRoom
+MRUItem1=/Game/Levels/Room4
+MRUItem2=/Game/Levels/Room3
+MRUItem3=/Game/Levels/Room2
+MRUItem4=/Game/Levels/BasicRoom
+MRUItem5=/Game/Levels/MasterLevel
+MRUItem6=/Game/Levels/MainMenu
+MRUItem7=/Game/Levels/LoseLevel
+MRUItem8=/Game/Levels/StartLevel
+MRUItem9=/Game/Levels/TestingPauseMenuLevel
+MRUItem10=/Game/Levels/TutorialRoom
+MRUItem11=/Game/Levels/OtherRoom
 
 [EditorStartup]
-LastLevel=/Game/Levels/MasterLevel
+LastLevel=/Game/Levels/EndRoom
 
 [AssetEditorSubsystem]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/InGame/Enemey.Enemey
-OpenAssetsAtExit=/Game/InGame/B_PlayerCharacter.B_PlayerCharacter
-OpenAssetsAtExit=/Game/InGame/Enemy_Projectile.Enemy_Projectile
-OpenAssetsAtExit=/Game/InGame/Wall.Wall
-OpenAssetsAtExit=/Game/InGame/B_PlayerBullet.B_PlayerBullet
+CleanShutdown=False
+OpenAssetsAtExit=/Game/InGame/roomBackground.roomBackground
+OpenAssetsAtExit=/Game/Textures/Level1Material.Level1Material
+OpenAssetsAtExit=/Game/InGame/B_Room.B_Room
+OpenAssetsAtExit=/Game/Textures/Level3Material.Level3Material
+OpenAssetsAtExit=/Game/InGame/B_RoomFinal.B_RoomFinal
 
 [DetailCategories]
 Actor.TransformCommon=True
@@ -223,8 +223,8 @@ StaticMeshComponent.TransformCommon=True
 StaticMeshComponent.Sockets=True
 StaticMeshComponent.StaticMesh=True
 StaticMeshComponent.Materials=True
-StaticMeshComponent.ComponentTick=True
-StaticMeshComponent.Physics=True
+StaticMeshComponent.ComponentTick=False
+StaticMeshComponent.Physics=False
 StaticMeshComponent.Collision=True
 StaticMeshComponent.HLOD=True
 StaticMeshComponent.Lighting=True
@@ -805,6 +805,46 @@ SceneComponent.Physics=True
 K2Node_VariableSet.Events=True
 EdGraphNode_Comment.GraphNodeDetail=True
 EdGraphNode_Comment.Comment=True
+texture_C.Tick=True
+texture_C.Replication=True
+texture_C.Rendering=True
+texture_C.Collision=True
+texture_C.Actor=True
+texture_C.Input=True
+texture_C.HLOD=True
+texture_C.WorldPartition=True
+texture_C.Events=True
+PreviewMaterial.PhysicalMaterial=True
+PreviewMaterial.Material=True
+PreviewMaterial.PhysicalMaterialMask=True
+PreviewMaterial.Translucency=True
+PreviewMaterial.TranslucencySelfShadowing=True
+PreviewMaterial.Usage=True
+PreviewMaterial.Mobile=True
+PreviewMaterial.ForwardShading=True
+PreviewMaterial.Group Sorting=True
+PreviewMaterial.PostProcessMaterial=True
+PreviewMaterial.Refraction=True
+PreviewMaterial.Lightmass=True
+PreviewMaterial.Previewing=True
+PreviewMaterial.ImportSettings=True
+roomBackground_C.TransformCommon=True
+roomBackground_C.Rendering=True
+roomBackground_C.Replication=True
+roomBackground_C.Collision=True
+roomBackground_C.HLOD=True
+roomBackground_C.Input=True
+roomBackground_C.Actor=True
+B_RoomFinal_C.Default=True
+B_RoomFinal_C.Tick=True
+B_RoomFinal_C.Replication=True
+B_RoomFinal_C.Rendering=True
+B_RoomFinal_C.Collision=True
+B_RoomFinal_C.Actor=True
+B_RoomFinal_C.Input=True
+B_RoomFinal_C.HLOD=True
+B_RoomFinal_C.WorldPartition=True
+B_RoomFinal_C.Events=True
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
@@ -1825,9 +1865,9 @@ UdpMessagingSettings=IOSRuntimeSettings.Build.Remote Build Options,InputSettings
 WmfMediaSettings=IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings.Attack,InputSettings.Bindings.ActionMappings.NewActionMapping_1,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.MoveRight,InputSettings.Bindings.AxisMappings.NewAxisMapping_0,InputSettings.Bindings.AxisMappings.MoveUp,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,GameMapsSettings.DefaultModes.SelectedGameModeDetails,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,
 BlockingVolume=BlockingVolume.Collision.Collision,
 BrushComponent=BlockingVolume.Collision.Collision,
-SceneComponent=
-StaticMeshComponent=StaticMeshComponent.Physics.ConstraintsGroup,
-B_Room_C=BlockingVolume.Collision.Collision,
+SceneComponent=StaticMeshComponent.Physics.ConstraintsGroup,BlockingVolume.Collision.Collision,
+StaticMeshComponent=StaticMeshComponent.Physics.ConstraintsGroup,BlockingVolume.Collision.Collision,
+B_Room_C=BlockingVolume.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,
 WorldPartitionRuntimeSpatialHash=WorldSettings.GameMode.SelectedGameModeDetails,WorldSettings.WorldPartition.None,
 PlayerStart=BlockingVolume.Collision.Collision,
 CapsuleComponent=BlockingVolume.Collision.Collision,
@@ -1846,6 +1886,7 @@ Enemey_C=BlockingVolume.Collision.Collision,
 NewBlueprint_C=BlockingVolume.Collision.Collision,
 Enemy_Projectile_C=BlockingVolume.Collision.Collision,
 Wall_C=BlockingVolume.Collision.Collision,
+roomBackground_C=BlockingVolume.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -1905,26 +1946,26 @@ ContentBrowserTab1.ThumbnailSize=2
 ContentBrowserTab1.CurrentViewType=1
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Levels/MasterLevel
-MRUItem1=/Game/Levels/BasicRoom
-MRUItem2=/Game/Levels/EndRoom
-MRUItem3=/Game/Levels/MainMenu
-MRUItem4=/Game/Levels/LoseLevel
-MRUItem5=/Game/InGame/B_PlayerBullet
-MRUItem6=/Game/InGame/Wall
-MRUItem7=/Game/InGame/B_PlayerCharacter
-MRUItem8=/Game/InGame/Enemy_Projectile
-MRUItem9=/Game/Levels/StartLevel
-MRUItem10=/Game/InGame/Enemey
-MRUItem11=/Game/Enemey
-MRUItem12=/Game/InGame/B_Room
-MRUItem13=/Game/InGame/NewBlueprint
-MRUItem14=/Game/GUI/MainMenu/PauseMenu
-MRUItem15=/Game/GUI/MainMenu/MainMenu
-MRUItem16=/Game/Levels/TestingPauseMenuLevel
-MRUItem17=/Game/Levels/TutorialRoom
-MRUItem18=/Game/Levels/OtherRoom
-MRUItem19=/Game/Levels/InGameScreen
+MRUItem0=/Game/InGame/B_RoomFinal
+MRUItem1=/Game/Levels/EndRoom
+MRUItem2=/Game/Levels/Room4
+MRUItem3=/Game/Levels/Room3
+MRUItem4=/Game/Levels/Room2
+MRUItem5=/Game/Textures/Level3Material
+MRUItem6=/Game/Levels/BasicRoom
+MRUItem7=/Game/Levels/MasterLevel
+MRUItem8=/Game/InGame/B_Room
+MRUItem9=/Game/Textures/Level1Material
+MRUItem10=/Game/InGame/texture
+MRUItem11=/Game/Levels/MainMenu
+MRUItem12=/Game/Levels/LoseLevel
+MRUItem13=/Game/InGame/B_PlayerBullet
+MRUItem14=/Game/InGame/Wall
+MRUItem15=/Game/InGame/B_PlayerCharacter
+MRUItem16=/Game/InGame/Enemy_Projectile
+MRUItem17=/Game/Levels/StartLevel
+MRUItem18=/Game/InGame/Enemey
+MRUItem19=/Game/Enemey
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2195,6 +2236,9 @@ K2Node_InputKey="\"Object\" "
 PauseMenu_C="\"Object\" "
 BoxComponent="\"Object\" "
 EdGraphNode_Comment="\"Object\" "
+PreviewMaterial="\"Object\" "
+Material="\"Object\" "
+MaterialInterface="\"Object\" "
 
 [DetailCategoriesAdvanced]
 B_PlayerCharacter_C.Replication=False
@@ -2206,8 +2250,10 @@ StaticMeshComponent.Collision=False
 Wall_C.Actor=True
 Wall_C.Collision=True
 SceneComponent.Physics=False
+StaticMeshComponent.Lighting=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/InGame/roomBackground.roomBackground;
 RecentlyPlaced=/Game/InGame/Enemey.Enemey;
 RecentlyPlaced=/Game/InGame/B_PlayerCharacter.B_PlayerCharacter;
 RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
@@ -2333,4 +2379,69 @@ RemoveLevelWarning=False
 [WorldBrowser]
 DisplayPaths=False
 DisplayActorsCount=False
+
+[/Script/UnrealEd.MaterialEditorOptions]
+bShowGrid=False
+bHideUnrelatedNodes=False
+bUseUnsortedMenus=False
+
+[MaterialEditor]
+PrimType=1
+
+[/Script/UnrealEd.MaterialStatsOptions]
+bPlatformUsed[0]=1
+bPlatformUsed[1]=0
+bPlatformUsed[2]=0
+bPlatformUsed[3]=0
+bPlatformUsed[4]=0
+bPlatformUsed[5]=0
+bPlatformUsed[6]=0
+bPlatformUsed[7]=0
+bPlatformUsed[8]=0
+bPlatformUsed[9]=0
+bPlatformUsed[10]=0
+bPlatformUsed[11]=0
+bPlatformUsed[12]=0
+bPlatformUsed[13]=0
+bPlatformUsed[14]=0
+bPlatformUsed[15]=0
+bPlatformUsed[16]=0
+bPlatformUsed[17]=0
+bPlatformUsed[18]=0
+bPlatformUsed[19]=0
+bPlatformUsed[20]=0
+bPlatformUsed[21]=0
+bPlatformUsed[22]=0
+bPlatformUsed[23]=0
+bPlatformUsed[24]=0
+bPlatformUsed[25]=0
+bPlatformUsed[26]=0
+bPlatformUsed[27]=0
+bPlatformUsed[28]=0
+bPlatformUsed[29]=0
+bPlatformUsed[30]=0
+bPlatformUsed[31]=0
+bPlatformUsed[32]=0
+bPlatformUsed[33]=0
+bPlatformUsed[34]=0
+bPlatformUsed[35]=0
+bPlatformUsed[36]=0
+bPlatformUsed[37]=0
+bPlatformUsed[38]=0
+bPlatformUsed[39]=0
+bPlatformUsed[40]=0
+bPlatformUsed[41]=0
+bPlatformUsed[42]=0
+bPlatformUsed[43]=0
+bPlatformUsed[44]=0
+bPlatformUsed[45]=0
+bPlatformUsed[46]=0
+bPlatformUsed[47]=0
+bPlatformUsed[48]=0
+bPlatformUsed[49]=0
+bPlatformUsed[50]=0
+bMaterialQualityUsed[0]=0
+bMaterialQualityUsed[1]=1
+bMaterialQualityUsed[2]=0
+bMaterialQualityUsed[3]=0
 
